--- a/SpringMVC-1/item-service/src/main/resources/templates/index.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body> <ul>
-    <li>상품 관리 <ul>
-        <li><a href="/basic/items">상품 관리 - 기본</a></li> </ul>
+    <li>Item Management<ul>
+        <li><a href="/basic/items">Item Management - Basic</a></li> </ul>
     </li> </ul>
 </body>
 </html>
