Implement Item Detail Info Page

--- a/SpringMVC-1/item-service/src/main/resources/templates/basic/items.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/basic/items.html
@@ -24,7 +24,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Price</th>
-                <th>Stock</th>
+                <th>Quantity</th>
             </tr>
             </thead>
             <tbody>
