--- a/SpringMVC-1/item-service/src/main/resources/templates/basic/item.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/basic/item.html
@@ -1,44 +1,48 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         .container {
             max-width: 560px;
-        }
-    </style>
+        } </style>
 </head>
 <body>
 <div class="container">
     <div class="py-5 text-center">
         <h2>Item Detail</h2></div>
     <div>
-        <label for="itemId">Item ID</label>
+        <label for="itemId">ID</label>
         <input type="text" id="itemId" name="itemId" class="form-control"
-               value="1" readonly>
+               value="1" th:value="${item.id}" readonly>
     </div>
-    <div>
-        <label for="itemName">Item Name</label>
+    <div><label for="itemName">Name</label>
         <input type="text" id="itemName" name="itemName" class="form-control"
-               value="상품A" readonly></div>
+               value="상품A" th:value="${item.itemName}" readonly></div>
     <div>
         <label for="price">Price</label>
         <input type="text" id="price" name="price" class="form-control"
-               value="10000" readonly>
+               value="10000" th:value="${item.price}" readonly>
     </div>
     <div>
-        <label for="quantity">Stock</label>
+        <label for="quantity">Quantity</label>
         <input type="text" id="quantity" name="quantity" class="form-control"
-               value="10" readonly>
+               value="10" th:value="${item.quantity}" readonly>
     </div>
     <hr class="my-4">
     <div class="row">
         <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'" type="button">Edit Item</button>
+            <button class="w-100 btn btn-primary btn-lg"
+                    onclick="location.href='editForm.html'"
+                    th:onclick="|location.href='@{/basic/items/{itemId}/ edit(itemId=${item.id})}'|" type="button">Edit Item
+            </button>
         </div>
         <div class="col">
-            <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'" type="button">To List</button>
+            <button class="w-100 btn btn-secondary btn-lg"
+                    onclick="location.href='items.html'"
+                    th:onclick="|location.href='@{/basic/items}'|" type="button">To List
+            </button>
         </div>
     </div>
 </div> <!-- /container -->
