--- a/SpringMVC-1/item-service/src/main/resources/templates/basic/addForm.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/basic/addForm.html
@@ -2,8 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="../css/bootstrap.min.css"
-          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         .container {
             max-width: 560px;
@@ -18,16 +17,14 @@
     <form action="item.html" th:action method="post">
         <div>
             <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-
-        control" placeholder="이름을 입력하세요"></div>
+            <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요"></div>
         <div>
             <label for="price">가격</label>
             <input type="text" id="price" name="price" class="form-control" placeholder="가격을 입력하세요">
         </div>
         <div>
             <label for="quantity">수량</label>
-            <input type="text" id="quantity" name="quantity" class="form-
-        control" placeholder="수량을 입력하세요"></div>
+            <input type="text" id="quantity" name="quantity" class="form-control" placeholder="수량을 입력하세요"></div>
         <hr class="my-4">
         <div class="row">
             <div class="col">
