--- a/SpringMVC-1/item-service/src/main/resources/templates/basic/addForm.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/basic/addForm.html
@@ -11,31 +11,29 @@
 </head>
 <body>
 <div class="container">
-    <div class="py-5 text-center"><h2>상품 등록 폼</h2>
+    <div class="py-5 text-center"><h2>Form add Item</h2>
     </div>
-    <h4 class="mb-3">상품 입력</h4>
+    <h4 class="mb-3">Item Form</h4>
     <form action="item.html" th:action method="post">
         <div>
-            <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요"></div>
+            <label for="itemName">Item Name</label>
+            <input type="text" id="itemName" name="itemName" class="form-control" placeholder="write name"></div>
         <div>
-            <label for="price">가격</label>
-            <input type="text" id="price" name="price" class="form-control" placeholder="가격을 입력하세요">
+            <label for="price">price</label>
+            <input type="text" id="price" name="price" class="form-control" placeholder="write price">
         </div>
         <div>
-            <label for="quantity">수량</label>
-            <input type="text" id="quantity" name="quantity" class="form-control" placeholder="수량을 입력하세요"></div>
+            <label for="quantity">quantity</label>
+            <input type="text" id="quantity" name="quantity" class="form-control" placeholder="write quantity"></div>
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">상품
-                    등록
-                </button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">add Item</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/basic/items}'|" type="button">취소
+                        th:onclick="|location.href='@{/basic/items}'|" type="button">cancel
                 </button>
             </div>
         </div>
