--- a/SpringMVC-1/item-service/src/main/resources/templates/basic/editForm.html
+++ b/SpringMVC-1/item-service/src/main/resources/templates/basic/editForm.html
@@ -11,36 +11,36 @@
 </head>
 <body>
 <div class="container">
-    <div class="py-5 text-center"><h2>상품 수정 폼</h2>
+    <div class="py-5 text-center"><h2>Form edit Item</h2>
     </div>
     <form action="item.html" th:action method="post">
         <div>
-            <label for="id">상품 ID</label>
+            <label for="id">Item ID</label>
             <input type="text" id="id" name="id" class="form-control" value="1" th:value="${item.id}" readonly>
         </div>
         <div>
-            <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control" value="상품A"
+            <label for="itemName">Item Name</label>
+            <input type="text" id="itemName" name="itemName" class="form-control" value="itemA"
                    th:value="${item.itemName}"></div>
         <div>
-            <label for="price">가격</label>
+            <label for="price">price</label>
             <input type="text" id="price" name="price" class="form-control" th:value="${item.price}">
         </div>
         <div>
-            <label for="quantity">수량</label>
+            <label for="quantity">quantity</label>
             <input type="text" id="quantity" name="quantity" class="form-control" th:value="${item.quantity}">
         </div>
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">저장
+                <button class="w-100 btn btn-primary btn-lg" type="submit">save
                 </button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='item.html'"
                         th:onclick="|location.href='@{/basic/items/{itemId}(itemId=${item.id})}'|"
-                        type="button">취소
+                        type="button">cancel
                 </button>
             </div>
         </div>
